@@ -6,6 +6,10 @@ Changes in Shorewall 4.3.3
 
 3) Enabled Traffic Shaping
 
+4) Convert AllowICMPs to a builtin action.
+
+5) Add 'proxyndp' interface option.
+
 Changes in Shorewall 4.3.2
 
 1) Added 'dhcp' option.
